# nico_download_with_query

./: .bumpversion.cfg  .gitignore  README.md  config.toml.example  main.py  params.json  passwd.json.example  pyproject.toml
nico_download/: downloader.py  logger.py  main.py
tests/: test_main.py
