[tool.poetry]
name = "nico_download"
version = "0.0.1"
description = ""
authors = ["TaizoAyase <zxcvbnmkind@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
nndownload = "^1.11"

[tool.poetry.dev-dependencies]
pysen = {extras = ["lint"], version = "^0.9.1"}
ipython = "^7.25.0"
jedi = "0.17.2"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py39"

[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
